12.1.0
-----
* Board diagrams are now more correct (and colorful)
* Rules involving briefs are given more weight

12.0.0
-----
* Added more aliases for steno key combinations
* Improved usability of the core API
* Manual translation edits in the title bar are now easier
* Discord bot now makes smarter search choices

11.2.0
-----
* Fixed several Discord bot issues

11.1.0
-----
* Refactored lexer and fixed some asterisk parsing issues
* Fixed several Plover plugin issues

11.0.0
-----
* Added Discord bot application
* Refactored code to be more usable as a library
* Fixed Plover plugin dict precedence

10.1.0
-----
* Added gzip compression to HTTP package
* Added caching to HTML display

10.0.0
-----
* Fixed all remaining known bugs
* Resolved several incorrect applications of vowel rules
* Improved GUI responsiveness in Plover
* Refactored debug tools

9.1.1
-----
* Fixed crashes related to Plover input in the GUI search box

9.1.0
-----
* Added new board diagram shapes
* Fixed CSS GUI layout
* Improved Qt GUI responsiveness during startup

9.0.0
-----
* Massive application engine overhaul
* Added phonetic display mode to board generator
* Factored search and display data containers to generate fewer HTTP requests
* Combined rules into one file, removed rules with bad accuracy
* Deprecated less useful config options, added others to main GUI

8.0.0
-----
* Restructured rules format
* Improved lexer and graph performance

7.0.1
-----
* Improved board generator code
* Updated documentation

7.0.0
-----
* Refactored the framework...again
* Further improved HTML display
* Added monospace compatibility mode to graph

6.1.1
-----
* Improved HTML display
* Fixed several bugs involving logging

6.1.0
-----
* Added logging facilities
* Improved HTTP support and performance
* Improved general code quality

6.0.0
-----
* Total refactoring of the framework with new HTTP support
* SVG board diagrams are now compatible with major web browsers