@@ -1,6 +1,6 @@
 [metadata]
 name = spectra_lexer
-version = 12.0.1
+version = 12.1.0
 description = Stroke and rule analyzer for stenography
 long_description = file: README.rst
 author = fourshade
